--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="wrapper">
         <!--- untuk Home-->
         <section id="Home">
-            <img src="Mouse Utama.png" width="400" height="400"/>
+            <img src="gambar/Mouse Utama.png" width="400" height="400"/>
             <div class="kolom">
                 <p class="judul">Best Perform More Exsperience For You</p>
                 <h2> Choose from our range of Bluetooth®, performance, ergonomic, business, EDU, travel, compact and WFH products.</h2>
